force-app/main/default/objects/A2A_Task__c/A2A_Task__c.object-meta.xml
<CustomObject>
    <description>Stores A2A task information for agent processing</description>
    <label>A2A Task</label>
    <nameField>
        <displayFormat>TASK-{0000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A2A Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>