force-app/main/default/objects/A2A_Task__c/fields/Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Artifacts__c</fullName>
    <description>JSON representation of task artifacts</description>
    <label>Artifacts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>