force-app/main/default/objects/A2A_Task__c/fields/Context_ID__c.field-meta.xml
<CustomField>
    <fullName>Context_ID__c</fullName>
    <description>Context identifier for the task</description>
    <label>Context ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>