force-app/main/default/objects/A2A_Task__c/fields/Message_History__c.field-meta.xml
<CustomField>
    <fullName>Message_History__c</fullName>
    <description>JSON representation of message history</description>
    <label>Message History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>