force-app/main/default/objects/A2A_Task__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <description>Additional metadata in JSON format</description>
    <label>Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>