force-app/main/default/objects/A2A_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the A2A task</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUBMITTED</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>RUNNING</fullName>
                <label>Running</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>