force-app/main/default/objects/A2A_Task__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <description>Unique identifier for the A2A task</description>
    <externalId>true</externalId>
    <label>Task ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>